test/files/neg/t8244/Raw_1.java
public abstract class Raw_1<T>{
        public Raw_1 raw() { return new Raw_1<String>() { public String t() { return ""; } }; }
        public abstract T t();
}
